Fixed jumping scrollbar

--- a/frontend/nau4ok/src/static/style.less
+++ b/frontend/nau4ok/src/static/style.less
@@ -10,7 +10,9 @@
 *::before,
 *::after {
   box-sizing: border-box;
+
 }
+
 
 .bg-img {
   position: absolute;
@@ -44,6 +46,10 @@
   top: 50%;
   width: 100%;
   transform: translateY(-50%);
+}
+
+html{
+  overflow-y: scroll;
 }
 
 body {
